# VoiceOS

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  LICENSE  NOTICE  README.md  docker-compose.gpu.yml  docker-compose.yml  docker-instructions.md  main.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt
.ci-venv/: pyvenv.cfg
agents/: agent_tool_integration.py
audio/: streaming_stt.py  voice_pipeline.py  whisper_filter.py
config/: app_aliases.yaml  voiceos.host.yaml  voiceos.hybrid.yaml  voiceos.yaml
core/: config_manager.py  event.py  orchestrator.py  web_server.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  agents.md  api_reference.md  architecture.md  core_integration_systems.md  memory_design.md  setup.md  tool_api.md  usage.md  voiceos_tools_integration_guide.md
gateway/: __init__.py  __main__.py  clarify.py  http_server.py  outbound.py  reply_context.py  run.py  runner.py  voiceos_adapter.py
helpers/: docker.py
host_bridge/: __init__.py  client.py  config.py  protocol.py  server.py
interrupt/: interrupt_controller.py  speech_state.py  thread_interrupt.py  tts_controller.py  turn_policy.py
listener/: backchannel_engine.py  speech_activity.py
llm/: agent_llm.py  llm_service.py  model_paths.py  streaming_llm.py
memory/: lifecycle.py  memory_manager.py  memory_service.py
model_manager/: model_downloader.py  model_manager.py  model_registry.py
permissions/: audit_log.py  permission_engine.py  write_approval.py
plugins/: README.md  (+1 more)
(+418 files in other folders)
